# TIES

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp  main_skew.cc
python/: do_train_nlp.py  do_train_parse.py  do_train_parse_neighbors.py  do_train_segment.py  parse_model.ckpt
python/conv_autoencoder/: Autoencoder.py  ModuleDecode.py  ModuleEncode.py  a_test.py  convolutional_autoencoder.py  prepare_dataset_for_conv_autoencoders.py  test_smooth.py  tests.py  try_random_crops.py
python/explore/: explore_mobilenet.py  nnconcat.py  runtime_sampling.py
python/helpers/: rects_functions.py
python/network/: ModuleA.py  ModuleAssociate.py  ModuleAssociate2.py  ModuleB.py  ModuleB2.py  ModuleB22.py  ModuleC.py  ModuleCollect.py  ModuleD.py  computation_graph.py  computation_graph_neighbor_parse.py  computation_graph_parse.py  data_features_dumper.py  dense.py  document_features.py  glove_reader.py  neighbor_graph_builder.py  table_data.py  table_segment_network.py  test_all.py  test_document_data_builder.py  trainer.py  trainer_neighbor_parse.py  trainer_parse.py
python/scripts/: remove_transparency.py  to_png.py  uzair_script.py
python/table_detect/: computation_graph_table_detect.py  prepare_dataset.py  prepare_dataset_old.py  table_detect_document.py  table_detect_document_2.py  table_detector.py  tests.py
python/table_parse/: computation_graph_table_parse.py  prepare_dataset_for_table_parsing.py  table_data.py  table_parser.py
python/table_parse_2d/: document_for_table_parse.py  document_for_zone_segment.py  lstm_2d.py  parser_2d.py  prepare_marg.py  (+5 more)
(+34 files in other folders)
